fixed welcomer text z-index to prevent bug that text was visible over the list

--- a/src/Routes/Main.css
+++ b/src/Routes/Main.css
@@ -700,7 +700,7 @@ h1{
   position: relative;
   font-size: 23px;
   font-weight: 500;
-  z-index: 2;
+  z-index: 1;
 }
 
 .welcomer span{
